lib/third/test/site/invalid_content_types/xhtml.php
<?php 
header('Content-Type: application/xhtml+xml');

for($i = 0; $i < 10000; $i ++) {
	echo 'A';
}
?>